<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.chat.fragment.SettingsFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/textTheme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/theme"
            android:layout_marginTop="36dp"
            android:layout_marginStart="20dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <com.google.android.material.materialswitch.MaterialSwitch
            android:id="@+id/switchTheme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:checked="false"
            app:thumbIcon="@drawable/light_mode"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/textTheme"
            app:layout_constraintBottom_toBottomOf="@id/textTheme"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutLanguage"
            style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="100dp"
            app:layout_constraintTop_toBottomOf="@id/switchTheme"
            app:layout_constraintEnd_toEndOf="@id/switchTheme">

            <com.google.android.material.textfield.MaterialAutoCompleteTextView
                android:id="@+id/materialAutoCompleteTextViewLanguage"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@null"
                android:cursorVisible="false"
                android:inputType="none"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/textLanguage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/language"
            app:layout_constraintTop_toTopOf="@id/textInputLayoutLanguage"
            app:layout_constraintBottom_toBottomOf="@id/textInputLayoutLanguage"
            app:layout_constraintStart_toStartOf="@id/textTheme"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnLogout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_logout"
            android:layout_marginTop="46dp"
            app:layout_constraintTop_toBottomOf="@id/textInputLayoutLanguage"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
